[package]
name = "nlp100-rust"
version = "0.1.0"
authors = ["masinc <masinc000@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.40"
thiserror = "1.0.25"
maplit = "1.0.2"
itertools = "0.10.0"
